# Local-PDP

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.dev/: bikes_example.ipynb  core_design.plantuml  iris_example.ipynb  manual_testing.ipynb  manual_testing.py
.github/workflows/: ci.yml  coverage.yml  docs-check.yml  lint.yml  release.yml
.spelling/: .codespell-words.txt  .codespellrc
docs/: .readthedocs.yaml  api.md  getting-started.md  ice.md  index.md  installation.md  mkdocs.yml  pdp.md
examples/: bikes_example.ipynb  iris_example.ipynb
spelling/: .codespell-words.txt  .codespellrc
src/faex/: __init__.py
src/faex/app/: faex_streamlit_app.py  faex_streamlit_app_v0.py  faex_streamlit_app_v1.py  faex_streamlit_app_v2.py  faex_streamlit_app_v4.py
src/faex/app/pages/: 01_PairPlots.py
src/faex/classifying/: ClassificationDataCore.py  ClassifierModelHandler.py  __init__.py
src/faex/core/: DataCore.py  ExplanationCore.py
src/faex/data/: DataHolder.py  holder_to_plotter.py
src/faex/explaining/: DataCore.py  Explainer.py  ExplainerConfiguration.py  ExplainerContext.py  ExplainerCore.py  ExplainerFactory.py  __init__.py
src/faex/explaining/explainers/: CacheExplainer.py  ICE.py  L_ICE.py  L_PDP.py  M_ICE.py  M_PDP.py  PDP.py  __init__.py  data.py  kernel.py
src/faex/mathing/: __init__.py  bandwidth.py  kernel.py  mathing.py
src/faex/mathing/distribution/: Distribution.py  UnionDistribution.py  __init__.py  kernel_distributions.py  parametric_distributions.py  sampling_distributions.py
src/faex/plotting/: DataPlotter.py  __init__.py  dataplotter_2d.py  plotter_matplotlib.py  plotter_params.py  plotter_plotly.py  plotter_symbols.py
src/faex/plotting/d2/: __init__.py  dataplotter_primitives_2d.py  dataplotter_special_2d.py
src/faex/resources/: dataseting.py
src/faex/utils/: SingletonFactory.py  decorators.py  typing.py
src/faxai/: __init__.py
src/faxai/data/: DataHolder.py  DataPlotter.py  __init__.py  holder_to_plotter.py
src/faxai/explaining/: DataCore.py  Explainer.py  ExplainerConfiguration.py  ExplainerContext.py  ExplainerCore.py  ExplainerFactory.py  ExplanationTechnique.py  ICE.py
src/faxai/explaining/configuration/: Configuration.py  DataCore.py  ExplainerConfiguration.py  __init__.py
src/faxai/explaining/explainers/: CacheExplainer.py  ICE.py  L_ICE.py  L_PDP.py  M_ICE.py  M_PDP.py  PDP.py  data.py  kernel.py
src/faxai/mathing/: RandomGenerator.py  bandwidth.py  kernel.py
src/faxai/mathing/distribution/: Distribution.py  UnionDistribution.py  kernel_distributions.py  parametric_distributions.py  sampling_distributions.py
src/faxai/plotting/: DataPlotter.py  dataplotter_2d.py
src/faxai/submodule_a/: __init__.py  a.py
src/faxai/utils/: SingletonFactory.py  __init__.py  decorators.py  typing.py  utils.py
src/lpdp/: __init__.py  utils.py
src/lpdp/submodule_a/: a.py
src/lpdp/utils/: __init__.py  utils.py
src/yourlib/: __init__.py  utils.py
src/yourlib/submodule_b/: __init__.py  b.py
tests/: conftest.py  test_a.py  test_b.py  test_bandwidth.py  test_import.py  test_kernel.py  test_utils.py
tests/explaining/explainers/: test_ICE.py  test_PDP.py
tests/mathing/: test_RandomGenerator.py  test_bandwidth.py  test_kernel.py
tests/mathing/distribution/: test_kernel_distributions.py  test_sampling_distributions.py  test_union_distribution.py
tests/utils/: test_typing.py
tests/utils/decorators/: test_cache_method.py  test_kewyword_only_method.py  test_keyword_only_method.py
