[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faxai"
version = "0.1.0"
description = "Feature Attribution Model-Agnostic Python library for Machine Learning Explainability"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    {name = "jparisu", email = "javier.paris.u@gmail.com"},
]
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["machine-learning", "explainability", "feature-attribution", "pdp", "local-pdp", "faxai"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pandas-stubs>=2.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.0.0",
    "plotly>=5.0.0",
    "scipy>=1.0.0",
    "scipy-stubs>=1.0.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.14.0",
    "mypy>=1.0.0",
    "codespell>=2.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/jparisu/faxai"
Documentation = "https://faxai.readthedocs.io/"
Repository = "https://github.com/jparisu/faxai"
Issues = "https://github.com/jparisu/faxai/issues"
Changelog = "https://github.com/jparisu/faxai/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["faxai*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test_*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["faxai"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py39"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["faxai"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
]
ignore_missing_imports = true

[tool.codespell]
skip = '*.lock,.git,*.egg-info,build,dist'
